--- a/index.qmd
+++ b/index.qmd
@@ -7,8 +7,8 @@ format: html
 These are all the materials from the coreR Course (October 2024). You have to render in order to create the html.
 
 ## Course Lessons
-- [Intro to Literate Analysis](script/quick_analysis.html)
-- [Cleaning and Wrangling data](script/cleaning_and_wrangling.html)
+- [Intro to Literate Analysis](script/quick-analysis.html)
+- [Cleaning and Wrangling data](script/cleaning _and_wrangling.html)
 - Data Visualization
 - Functions
 
